--- a/document/latex/after_body.tex
+++ b/document/latex/after_body.tex
@@ -1,10 +1,12 @@
 \backmatter
-\chapter{Appendices}
+\chapter{Appendix A: Permissions}
 
 \thispagestyle{empty}
 \begin{center}
 \includegraphics{karpinskipermission.png}
 \end{center}
+
+\chapter{Appendix B: Permissions}
 
 \thispagestyle{empty}
 \begin{center}
@@ -12,6 +14,8 @@
 \end{center}
 
 \chapter{Vita}
+
+\doublespacing
 
 David John Baker is a music researcher and educator passionate about questions at the intersection of music theory and music science.
 His research looks to understand how the people learn melodies in order to improve pedagogical practices in aural skills education.
