--- a/document/latex/preamble.tex
+++ b/document/latex/preamble.tex
@@ -1,5 +1,6 @@
 \usepackage{booktabs}
 \usepackage{amsthm}
+\usepackage{setspace}
 \usepackage{graphicx}
 \makeatletter
 \def\thm@space@setup{%
@@ -9,7 +10,7 @@
 
 
 \makeatother % remove for lsu
-\raggedbottom % remove for LSu
+%\raggedbottom % remove for LSu
 
 
 
