--- a/document/latex/before_body.tex
+++ b/document/latex/before_body.tex
@@ -1,34 +1,39 @@
 \newpage\thispagestyle{empty}
-\begin{center}
-MODELING MELODIC DICTATION
-\end{center}
-\vspace{1in}
+{\centering
+  MODELING MELODIC DICTATION\\
+}
 \begin{center}
 A Dissertation
 
-Submitted to the Graduate Faculty of the Louisiana State University and Agricultural and Mechanical College in partial fulfillment of the requirements for the degree of Doctor of Philosophy
+Submitted to the Graduate Faculty of the\\
+Louisiana State University and\\
+Agricultural and Mechanical College\\
+in partial fulfillment of the\\
+requirements for the degree of\\
+Doctor of Philosophy\\
 
 in
 
 The School of Music
 \end{center}
-\vspace{1in}
-\begin{center}
+
+{\centering
 by\\
 David John Baker\\
 B.M., Baldwin Wallace University, 2012\\
-MSc., Goldsmiths, University of London, 2015\\
-May 2019
-\end{center}
+MSc., Goldsmiths, University of London, 2014\\
+August 2019\\
+}
+
 
 \setlength{\abovedisplayskip}{-5pt}
 \setlength{\abovedisplayshortskip}{-5pt}
 
-\cleardoublepage\newpage\thispagestyle{empty}\null
-\cleardoublepage\newpage\thispagestyle{empty}\null
+%\cleardoublepage\newpage\thispagestyle{empty}\null
+%\cleardoublepage\newpage\thispagestyle{empty}\null
 
 % Copyright
-\thispagestyle{empty}
+\newpage\thispagestyle{empty}
 
 © 2019 copyright
 
@@ -36,19 +41,20 @@ David John Baker
 
 All rights reserved
 
-\cleardoublepage\newpage
+%%%%%\cleardoublepage\newpage
+\newpage
 
 % Dedication
 \thispagestyle{empty}
-\chapter{Dedication}
+\chapter{}
 
 This dissertation is dedicated to my parents.
 Thank you for valuing education.
 Thank you for fostering my growth in every way possible.
 As a result, you've opened my eyes to the world.
 
-\setlength{\abovedisplayskip}{-5pt}
-\setlength{\abovedisplayshortskip}{-5pt}
+%\setlength{\abovedisplayskip}{-5pt}
+%\setlength{\abovedisplayshortskip}{-5pt}
 
 % Acknowledgements
 \chapter{Acknowledgements}
